hphp/hack/test/typecheck/type__toString4.php.exp
File "type__toString4.php", line 21, characters 18-22:
You cannot use this object as a string
Implicit conversions of Stringish objects to string are deprecated. (Typing[4067])
